# lista-della-spesa

./: CMakeLists.txt  Item.cpp  Item.h  Observer.h  ShoppingList.cpp  ShoppingList.h  Subject.h  User.cpp  User.h  main.cpp
test/: ItemTest.cpp  ShoppingListTest.cpp  UserTest.cpp  test_shopping_list.cpp
